# ocr_perf_tests

./: CMakeLists.txt  README.md  test_pytesseract.py  test_tesserocr.py
src/: main.cpp  threadible.hpp
